--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ summaryLength = 25
 copyright = "John Doe - All rights reserved"
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 enableEmoji = true
-publishDir = "docs"
+publishDir = "public"
 #disqusShortname = "your-shortname-here"
 #googleAnalytics = "UA-1XXXXXXX1-1"
 
